[tool.poetry]
name = "foiaonline"
version = "0.1.0"
description = ""
authors = ["Ed Summers <ehs@pobox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = "^2.31.0"
wayback = "^0.4.3"
jupyterlab = "^4.0.6"
pandas = "2.0.2"
matplotlib = "^3.8.0"
plotly = "^5.17.0"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
